# kylin-kmre-display-control

./: CMakeLists.txt  Readme
debian/: changelog  control  copyright  kylin-kmre-display-control.install  rules
host/: CMakeLists.txt
host/display-control/: CMakeLists.txt  display_control.c  display_control.h  main.cpp
host/display-control/utils/: debug.c  debug.h  dll.c  dll.h
host/include/DisplayControl/: DisplayControlDecoder.h  display_control_api.h  display_control_api_functions.h
host/include/libDisplayControl/: IOStream.h
host/libs/: CMakeLists.txt
host/libs/displayControl_dec/: CMakeLists.txt  displayControl.attrib  displayControl.in  displayControl.types  displayControl_dec.cpp  displayControl_dec.h  displayControl_opcodes.h  displayControl_server_proc.h  (+3 more)
host/libs/libDisplayControl/: CMakeLists.txt  DisplayControl.cpp  DisplayControl.h  DisplayControlDecoder.cpp  DisplayControlServer.cpp  DisplayControlServer.h  DisplayControlThread.cpp  DisplayControlThread.h  ReadBuffer.cpp  ReadBuffer.h  SocketStream.cpp  SocketStream.h  UnixStream.cpp  UnixStream.h  display_control_api.cpp  display_control_api.entries  kmre_display_control.c  kmre_display_control.h  kmre_socket.c  kmre_socket.h
scripts/: gen-emugl-entries.py  gen-emugl-headers.sh
shared/: CMakeLists.txt
system/: CMakeLists.txt
system/displayControl_enc/: CMakeLists.txt  displayControl_client_context.cpp  displayControl_client_context.h  displayControl_client_proc.h  displayControl_enc.cpp  displayControl_enc.h  displayControl_entry.cpp  displayControl_ftable.h  displayControl_opcodes.h
(+4 files in other folders)
